--- a/ruiruizhao.conf
+++ b/ruiruizhao.conf
@@ -35,31 +35,25 @@ server=/*.xiaomi.com/119.29.29.29
 address=/mtalk.google.com/108.177.125.188
 
 [policy]
-# CNMedia 分流为中国媒体（包括A站、B站、爱奇艺等）；GBMedia 为国际媒体（包括HULU、HBO等）；
-# Mainland 为访问大部分大陆网站时的分流策略；Outside 指定访问境外网站时的分流；
-# Others 为其他规则，若前边的规则都没有被匹配到，则听从此策略组的规定。
-# 策略想走特定节点或套娃，请长按分流策略组自行添加节点/策略组
-# 自动测速策略组只包含常用地区HK,JP,SG,KR,US,TW, 其他地区和游戏节点建议在Proxy选择然后改变分流策略
 static=大陆网站, direct, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
 static=境外网站, proxy, direct, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=漏网之鱼, direct, proxy, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
-url-latency-benchmark=OpenAI, server-tag-regex=(?=.*(OpenAI|AI|chatgpt)), check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bot.png
+static=OpenAI, server-tag-regex=(?=.*(OpenAI|AI|chatgpt|ChatGPT)), check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bot.png
 static=Netflix, direct, proxy, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix_Letter.png
 static=Telegram, direct, proxy, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 static=Google, proxy, direct, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
 static=广告拦截, direct, reject, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
-url-latency-benchmark=🇭🇰Hong Kong, server-tag-regex=(?=.*(港|香港|HK|(?i)Hong))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-url-latency-benchmark=🇨🇳Taiwan, server-tag-regex=(?=.*(台|臺|台湾|台灣|TW|(?i)Taiwan))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-url-latency-benchmark=🇯🇵Japan, server-tag-regex=(?=.*(日|日本|JP|(?i)Japan))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-url-latency-benchmark=🇰🇷Korea, server-tag-regex=(?=.*(韓|韩|韩国|韓國|南朝鲜|KR|(?i)Korean))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
-url-latency-benchmark=🇺🇸United States, server-tag-regex=(?=.*(美|美国|美國|US|(?i)States|American))^((?!(专线|手游|游戏|网易云|云音乐|🎶(?i)IPLC|IEPL|game|music|𝐌𝐮𝐬𝐢𝐜|Unbolck|Music|Netease)).)*$, check-interval=1800, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+static=🇭🇰Hong Kong, server-tag-regex=(?=.*(港|香港|HK|(?i)Hong))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+static=🇨🇳Taiwan, server-tag-regex=(?=.*(台|臺|台湾|台灣|TW|(?i)Taiwan))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+static=🇯🇵Japan, server-tag-regex=(?=.*(日|日本|JP|(?i)Japan))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+static=🇰🇷Korea, server-tag-regex=(?=.*(韓|韩|韩国|韓國|南朝鲜|KR|(?i)Korean))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, check-interval=1800, tolerance=10, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+static=🇺🇸United States, server-tag-regex=(?=.*(美|美国|美國|US|(?i)States|American))^((?!(专线|手游|游戏|网易云|云音乐|🎶(?i)IPLC|IEPL|game|music|𝐌𝐮𝐬𝐢𝐜|Unbolck|Music|Netease)).)*$, check-interval=1800, tolerance=0, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
 
 [server_local]
 # 本地服务器部分, 自行添加即可
 
 [server_remote]
 # 节点远程订阅
-https://git.io/JfNq3, tag=网易云解锁灰色音乐, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png, update-interval=86400, opt-parser=true, enabled=true
 
 [filter_remote]
 # 远程分流规则策略组
