补充提交WhatsApp分流规则。

--- a/ruiruizhao.conf
+++ b/ruiruizhao.conf
@@ -41,6 +41,7 @@ static=漏网之鱼, direct, proxy, img-url=https://raw.githubusercontent.com/Ko
 static=OpenAI, server-tag-regex=(?=.*(OpenAI|AI|chatgpt|ChatGPT)), check-interval=1800, tolerance=10, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bot.png
 static=Netflix, direct, proxy, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix_Letter.png
 static=Telegram, direct, proxy, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+static=Whatsapp, direct, proxy, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States
 static=Google, proxy, direct, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
 static=Apple, proxy, direct, 🇭🇰Hong Kong, 🇨🇳Taiwan, 🇯🇵Japan, 🇰🇷Korea, 🇺🇸United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_1.png
 static=广告拦截, direct, reject, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
